<resources>
    <string name="app_name">HeratUniApp</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_attendance_text">Subject Attendance</string>
    <string name="start_date_text">Start date</string>
    <string name="end_date_text">End Date</string>
    <string name="to_text">To</string>
    <string name="from_text">From</string>
    <string name="total_text">Total</string>
    <string name="subject_text">Subjects</string>
    <string name="enroll_no">Enroll No</string>
    <string name="class_rank_text">Class Rank</string>
    <string name="class_text">Class</string>
    <string name="student_profile_text">Student Profile</string>
    <string name="about_me_text">About Me</string>
    <string name="curriculum_text">Curriculum</string>
    <string name="birth_country_text">BirthCountry</string>
    <string name="nationality_text">Nationality</string>
    <string name="gender_text">Gender</string>
    <string name="date_of_birth_text">Date Of Birth</string>
    <string name="email_text">Email</string>
    <string name="title_activity_student_login">Herat UniApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_image">View</string>
    <string name="upload">Upload Image</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <array name="teacherName">
        <item>Akhtar Mohammad</item>
        <item>Kiara Adviani</item>
        <item>Kabir Singh</item>
        <item>Esmail Rahmani</item>
        <item>Hussain Gawhari</item>
        <item>Omid Nikan</item>
        <item>Ali Nadim</item>
    </array>
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="feedback_type">Feedback type</string>

</resources>