<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_margin="0dp"
    android:scrollbarSize="0dp"
    android:padding="12dp"
    android:background="@color/colorBackground"
    tools:context="fragment.AttendanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/subject_attendance_text"
            android:textColor="@color/black"
            android:textSize="28sp" />


        <libs.mjn.fieldset.FieldSetView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:fsv_borderAlpha="0.75"
            app:fsv_borderColor="@color/colorToolbar"
            app:fsv_borderRadius="12dp"
            app:fsv_borderWidth="3dp"
            app:fsv_legend="Start Date"
            app:fsv_legendColor="#C2185B"
            app:fsv_legendPosition="left"
            app:fsv_legendSize="16sp">

            <TextView
                android:id="@+id/start_date_attendance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/start_date_text"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </libs.mjn.fieldset.FieldSetView>

        <libs.mjn.fieldset.FieldSetView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:fsv_borderAlpha="0.75"
            app:fsv_borderColor="@color/colorToolbar"
            app:fsv_borderRadius="12dp"
            app:fsv_borderWidth="3dp"
            app:fsv_legend="End Date"
            app:fsv_legendColor="@color/textMainColor"
            app:fsv_legendPosition="left"
            app:fsv_legendSize="16sp">

            <TextView
                android:id="@+id/end_date_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date_text"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"

                />
        </libs.mjn.fieldset.FieldSetView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/total_text"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <include layout="@layout/subject_attendance_row" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/subject_text"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/line11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>