<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:layout_margin="0dp"
        tools:context="fragment.StudentProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/student_profile_pic"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="5dp"
                        android:src="@drawable/omid"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/name_of_student_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Name of Student here"
                        android:textColor="@color/black"
                        android:textSize="22sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/light_blue"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/enroll_no" />

                            <TextView
                                android:id="@+id/enroll_no_student_profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:gravity="center_horizontal"
                                android:text="191142" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/class_text" />

                            <TextView
                                android:id="@+id/class_student_profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="TY BCA" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/class_rank_text" />

                            <TextView
                                android:id="@+id/class_rank_student_profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="Second" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about_me_text"
                    android:textColor="@color/black"
                    android:textSize="22sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_curriculum"
                    android:padding="5dp"
                    android:text="@string/curriculum_text"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/curriculum_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="25dp"
                    android:text="GU"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--            <include layout="@layout/buttom_border" />-->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_child_friendly_24"
                    android:padding="5dp"

                    android:text="@string/birth_country_text"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/birth_country_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="25dp"
                    android:text="Afghanistan"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--            <include layout="@layout/buttom_border" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_map_24"
                    android:padding="5dp"

                    android:text="@string/nationality_text"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nationality_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="25dp"
                    android:text="Afghanistan"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--            <include layout="@layout/buttom_border" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_man"

                    android:padding="5dp"
                    android:text="@string/gender_text"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/gender_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="25dp"
                    android:text="Male"

                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--            <include layout="@layout/buttom_border" />-->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_culender"
                    android:padding="5dp"
                    android:text="@string/date_of_birth_text"
                    android:textColor="@color/red"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/date_of_birth_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="25dp"
                    android:text="02/05/2000"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--            <include layout="@layout/buttom_border" />-->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:padding="5dp"
                    android:text="@string/email_text"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/email_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingStart="25dp"
                    android:text="EsmailRahmani@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <!--            <include layout="@layout/buttom_border" />-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>